Fixed the layout bugs on all pages

--- a/css/styles_dark_goa.css
+++ b/css/styles_dark_goa.css
@@ -38,6 +38,10 @@ var(--secondary-line-height);
     --secondary-line-height: 0.5;
   }
   
+* {
+    padding: 0;
+    margin: 0;
+}
 
 body,
 p,
@@ -59,10 +63,12 @@ h4 {
     font-weight: var(--primary-font-weight);
     font-size: 14px;
     line-height: 1.2;
+    
 }
 
 body {
     background-color: var(--background-grey-color);
+    width: 100%;
 }
 
 h1,
@@ -311,16 +317,65 @@ ul {
 
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< HEADER POSITIONING >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 
-.page-header {
+header {
     display: flex;
+    justify-content: space-between;
     width: 100%;
     max-width: 1600px;
     margin: auto;
     padding: 20px;
 }
 
+.page-header__logo--container {
+    display: flex;
+}
+
+/*.page-header__item {
+    flex: 0 1 200px;
+    justify-content: end;
+}*/
+
+.page-header__nav--container {
+    flex-grow: 1;
+    text-align: right;
+    margin-top: 15px;
+}
+
+.navigation-list li {
+    display: inline-block;
+    margin-left: 15px;
+}
+
+header img {
+    width: 200px;
+    height: 50px;
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+
+/* SAFE HEADER CSS TEMP
+
+.page-header {
+    display: flex;
+    align-items: stretch;
+    width: 100%;
+    max-width: 1600px;
+    margin: auto;
+    padding: 20px;
+}
+
+.page-header__logo--container {
+    display: flex;
+}
+
 .page-header__item {
     flex: 0 1 200px;
+    justify-content: end;
 }
 
 .page-header__item:last-child {
@@ -334,9 +389,13 @@ ul {
 }
 
 header img {
-    width: 100px;
+    width: 200px;
     height: 50px;
 }
+
+nav.page-header__item {
+    display: flex;
+}*/
 
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> HEADER POSITIONING END <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 
@@ -364,15 +423,38 @@ header img {
 }
 
 .section-main__content--column {
-
-    flex-direction: column;
+    width: 100%;
     max-width: 500px;
+    height: 500px;
     margin: auto;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 0 0 0;
+    position: relative;
+
+}
+
+.contact-section-main__content--column {
+    width: 100%;
+    max-width: 500px;
+    height: 600px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 0 0 0;
+    position: relative;
 
 }
 
 .profile__portrait {
     max-width: 50%;
+    min-width: 265px;
     height: auto;
     border-radius: 50%;
     margin: 0 25px;
@@ -399,6 +481,14 @@ input,
 textarea {
     border: none;
     background-color: var(--lightest-grey-color);
+}
+
+textarea {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0;
 }
 
 ::-webkit-resizer {
@@ -482,7 +572,7 @@ img.social-media__item {
 
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< MEDIA QUERIES >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 540px) {
     .grid {
         grid-template-columns: 1fr;
 }
@@ -490,11 +580,88 @@ img.social-media__item {
         font-size: 50px;
     }
 
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    nav {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .page-header__nav--container {
+        display: flex;
+        justify-content: center;
+    }
+
+    nav ul {
+        padding-left: 0;
+    }
+
+    nav ul li:first-child {
+        margin-left: 0;
+    }
+
+    .page-header__logo--container {
+        justify-content: center;
+    }
+
+    .section-main__content {
+        flex-direction: column-reverse;
+    }
+
+    .section-main {
+        margin-top: 0;
+    }
+
+    .home--copy {
+        margin-bottom: 50px;
+    }
+
+    .section-main__content--column {
+        flex-direction: column;
+        max-width: 90%;
+    }
+
+    .contact-section-main__content--column {
+        width: 90%;
+    
+    }
 }
 
-@media all and (min-width: 501px) and (max-width: 800px) {
+@media all and (min-width: 541px) and (max-width: 800px) {
     .grid {
         grid-template-columns: 1fr 1fr;
+    }
+
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    nav {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .page-header__nav--container {
+        display: flex;
+        justify-content: center;
+    }
+
+    nav ul {
+        padding-left: 0;
+    }
+
+    nav ul li:first-child {
+        margin-left: 0;
+    }
+
+    .page-header__logo--container {
+        justify-content: center;
     }
 }
 
